# docs/swagger.json
@@ -50,18 +50,6 @@
                 "summary": "Listar chats",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Filtrar por usuário",
-                        "name": "userID",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Filtrar por título",
-                        "name": "title",
-                        "in": "query"
-                    },
-                    {
                         "maximum": 100,
                         "minimum": 1,
                         "type": "integer",
@@ -74,6 +62,11 @@
                         "type": "integer",
                         "example": 1,
                         "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "total",
                         "in": "query"
                     }
                 ],
@@ -89,10 +82,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/chat_dto.ChatDto"
-                                            }
+                                            "$ref": "#/definitions/chat_dto.ListChatDto"
                                         }
                                     }
                                 }
@@ -342,6 +332,31 @@
             "properties": {
                 "content": {
                     "type": "string"
+                }
+            }
+        },
+        "chat_dto.ListChatDto": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/chat_dto.ChatDto"
+                    }
+                },
+                "limit": {
+                    "type": "integer",
+                    "maximum": 100,
+                    "minimum": 1,
+                    "example": 10
+                },
+                "page": {
+                    "type": "integer",
+                    "minimum": 1,
+                    "example": 1
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
